--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                <p>
                <img src="4.jpeg"
 >        <p>We offer the best machines on the market.</p>               <p>
-               <img src="3.jpG"
+               <img src="7.jpeg"
     </section>
 
     <!-- Contact Section -->
