--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="social-links">
         <a href="https://www.facebook.com/sarlkacidi?mibextid=ZbWKwL" target="_blank">Facebook</a> | 
         <a href="https://twitter.com/yourprofile" target="_blank">Twitter</a> | 
-        <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/@mix master " target="_blank">LinkedIn</a>
     </div>
 </footer>
 </body>
